[FIX] z-index drawer

--- a/frontend/styles/components/slider.css
+++ b/frontend/styles/components/slider.css
@@ -28,7 +28,7 @@
 
 .slider__placeholder {
   width: 100%;
-  max-height: 400px;
+  max-height: 700px;
   display: flex;
   align-items: center;
   justify-content: center;
